--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
+    "@angular/cdk": "^8.1.3",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.1.1",
+    "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "@ngrx/store": "^8.2.0",
+    "angularfire2": "^5.2.1",
+    "firebase": "^6.4.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
